--- a/ui/src/views/pages/Login/Login.scss
+++ b/ui/src/views/pages/Login/Login.scss
@@ -1,11 +1,19 @@
-#login {
-    height: 50%;
+#particles-js {
+    height: 100%;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    z-index: 0;
+    background-color: black;
+    z-index:0;
+
+    .loc {
+        z-index: 999;
+        margin-left: 60%;
+
+        @media only screen and (max-width: 1300px) {
+            margin-left: 20%;
+            width: 900px;
+        }
+        // width:900px;
+    }
 }
 
 .login-logo img {
