--- a/ui/src/sass/variables.scss
+++ b/ui/src/sass/variables.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
+
+// Globals
+$body-font-family: 'Poppins', sans-serif !default;
+
 $font-size-root: 14px;
 $sheet-border-radius: 4px;
 $list-item-title-font-size: 0.929rem;
@@ -9,6 +14,8 @@ $btn-sizes: ( default: 41, large: 54 );
 $btn-letter-spacing: 0;
 $btn-font-weight: 400;
 $card-text-font-size: 16px;
+
+
 
 $headings: (
   'h1': (
