--- a/ui/src/sass/vuetify-material/_buttons.sass
+++ b/ui/src/sass/vuetify-material/_buttons.sass
@@ -64,4 +64,4 @@
   &.error
     border-color: #ff5252 !important
   &.info
-    border-color: #00cae3 !important
+    border-color: #1e88e5 !important
