--- a/ui/src/views/pages/Login/Login.scss
+++ b/ui/src/views/pages/Login/Login.scss
@@ -7,6 +7,7 @@
     .loc {
         z-index: 999;
         margin-left:60%;
+        width: 20%;
 
         @media only screen and (max-width: 1600px) {
             margin-left: 25%;
