--- a/ui/src/views/widgets/CommunityView/CommunityView.scss
+++ b/ui/src/views/widgets/CommunityView/CommunityView.scss
@@ -1,14 +1,14 @@
 
-.display_class {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-self: center;
-    .layout {
-        margin-top: 130px;
-    }
+// .display_class {
+//     // display: flex;
+//     // flex-direction: column;
+//     // justify-content: center;
+//     // align-self: center;
+//     .layout {
+//         // margin-top: 130px;
+//     }
     
-}
+// }
 
 .row{
     justify-content: center;
