--- a/ui/src/views/pages/Login/Login.scss
+++ b/ui/src/views/pages/Login/Login.scss
@@ -9,10 +9,10 @@
         margin-left:10%;
         width: 20%;
 
-        @media only screen and (max-width: 1600px) {
-            margin-left: 45%;
-            width: 900px;
-        }
+        // @media only screen and (max-width: 1600px) {
+        //     margin-left: 45%;
+        //     width: 900px;
+        // }
         // width:900px;
     }
 }
