--- a/ui/src/views/pages/Login/Login.scss
+++ b/ui/src/views/pages/Login/Login.scss
@@ -1,7 +1,7 @@
 #particles-js {
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: white;
     z-index:0;
     padding-left: 40%;
 
